--- a/src/index.html
+++ b/src/index.html
@@ -48,24 +48,23 @@
         const data = [
           {
             type: "text",
-            value: "This is a sample print job",
-            // style: "font-size: 16px; color: #3CAF50;",
+            value: "This is a amazing text printed by application of \"Rafael do Electron\"",
           },
-          //   {
-          //     type: "barCode",
-          //     value: "HB4587896",
-          //     height: 12, // height of barcode, applicable only to bar and QR codes
-          //     width: 1, // width of barcode, applicable only to bar and QR codes
-          //     displayValue: true, // Display value below barcode
-          //     fontsize: 8,
-          //   },
-          //   {
-          //     type: "qrCode",
-          //     value: "https://github.com/Hubertformin/electron-pos-printer",
-          //     height: 55,
-          //     width: 55,
-          //     style: "margin: 10 20px 20 20px",
-          //   },
+            {
+              type: "barCode",
+              value: "HB4587896",
+              height: 12, // height of barcode, applicable only to bar and QR codes
+              width: 1, // width of barcode, applicable only to bar and QR codes
+              displayValue: true, // Display value below barcode
+              fontsize: 8,
+            },
+            {
+              type: "qrCode",
+              value: "https://github.com/Hubertformin/electron-pos-printer",
+              height: 55,
+              width: 55,
+              style: "margin: 10 20px 20 20px",
+            },
         ];
 
         ipcRenderer.send("print", { data, printerName });
