--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="input-content">
-          <label>Margem vertical:</label>
+          <label>Margem vertical (pixels):</label>
           <input
             id="vertical-margin"
             type="text"
@@ -37,7 +37,7 @@
         </div>
 
         <div class="input-content">
-          <label>Margem horizontal:</label>
+          <label>Margem horizontal (pixels):</label>
           <input
             id="horizontal-margin"
             type="text"
